<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/loginText"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_entrance"
        android:textSize="28sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/email_hint"/>
    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint_text"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_hint"/>
    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_text"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="20dp"
        android:backgroundTint="@color/green"
        app:cornerRadius="30dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_button_text"
        android:fontFamily="@font/roboto_medium"/>

    <LinearLayout
        android:id="@+id/no_account_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_semibold"/>

        <TextView
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_semibold"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_semibold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/no_account_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:id="@+id/divider_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vk_button"
            android:layout_width="0dp"
            android:minHeight="56dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/vk_mini"
            app:iconGravity="textStart"
            app:cornerRadius="24dp"
            app:iconSize="24dp"
            android:padding="8dp"
            app:iconTint="@android:color/white"
            app:backgroundTint="#0077FF" />

        <com.google.android.material.button.MaterialButton
            android:minHeight="56dp"
            android:id="@+id/ok_button"
            app:iconSize="24dp"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text=""
            app:icon="@drawable/ok_mini"
            app:iconTint="@android:color/white"
            app:iconGravity="textStart"
            app:cornerRadius="30dp"
            app:backgroundTint="#F58220" />


    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>